--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,20 @@
   </head>
   <body>
     <div class="hero">
-      <h1>Tony Liang</h1>
+      <a href="http://tonyliang.com">
+        <h1 class="display-name">Tony Liang</h1>
+      </a>
+      <div class="icon-bar">
+        <a target="_blank" href="https://www.github.com/prebeta">
+          <img src="images/github.png">
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/tony3827">
+          <img src="images/linkedin.png">
+        </a>
+        <a href="">
+          <img src="images/email.png">
+        </a>
+      </div>
     </div>
   </body>
 </html>
