--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,43 @@
         <a target="_blank" href="https://www.linkedin.com/in/tony3827">
           <img src="images/linkedin.png">
         </a>
-        <a href="">
+        <a href="mailto:tony3827@gmail.com">
           <img src="images/email.png">
         </a>
+      </div>
+    </div>
+    <div class="profile">
+      <img class="profile-img" src="images/profile.jpg">
+      <h1 class="profile-slg">I build things to make lives easier.</h1>
+    </div>
+    <div class="project-panel">
+      <hr class="project-divider">
+      <div class="project-partial">
+        <img class="project-img" src="images/demeremacbook.png">
+      </div>
+      <div class="project-partial">
+        <div class="project-desc-left">
+          <h1 class="project-name">Demere</h1>
+          <p class="project-role">Co-Founder | CTO | Full Stack Developer</p>
+          <p class="project-info">Built a web application that provides personalized outfit suggestions using Ruby on Rails and Amazon Web Services. 
+          <p class="project-info">Presented at Carnegie Mellon as a finalist for the CMU Summit in 2015.</p>
+          <p class="project-info">Received recognition as a finalist for DC's best tech manager for the 2015 Tech in Motion Awards.</p>
+        </div>
+      </div>
+    </div>
+    <div class="project-panel">
+      <hr class="project-divider">
+      <div class="project-partial">
+        <div class="project-desc-right">
+          <h1 class="project-name">FlexEl</h1>
+          <p class="project-role">Internal Systems Administrator</p>
+          <p class="project-info">Managed internal systems for FlexEl to ensure site reliability and secure access to internal resources.</p>
+          <p class="project-info">Built internal tools to allow reservation of shared spaces and file sharing.</p>
+          <p class="project-info">Set up disaster recovery system to mitigate costs of potential infrastructure failure.</p>
+        </div>
+      </div>
+      <div class="project-partial">
+        <img class="project-img" src="images/flexellogo.jpg">
       </div>
     </div>
   </body>
