--- a/public/index.html
+++ b/public/index.html
@@ -26,34 +26,38 @@
       <img class="profile-img" src="images/profile.jpg">
       <h1 class="profile-slg">I build things to make lives easier.</h1>
     </div>
-    <div class="project-panel">
+    <div class="project-panel left">
       <hr class="project-divider">
-      <div class="project-partial">
+      <div class="project-partial image">
         <img class="project-img" src="images/demeremacbook.png">
       </div>
-      <div class="project-partial">
-        <div class="project-desc-left">
+      <div class="project-partial description">
+        <div class="project-desc">
           <h1 class="project-name">Demere</h1>
           <p class="project-role">Co-Founder | CTO | Full Stack Developer</p>
-          <p class="project-info">Built a web application that provides personalized outfit suggestions using Ruby on Rails and Amazon Web Services. 
-          <p class="project-info">Presented at Carnegie Mellon as a finalist for the CMU Summit in 2015.</p>
-          <p class="project-info">Received recognition as a finalist for DC's best tech manager for the 2015 Tech in Motion Awards.</p>
+          <ul class="project-info">
+            <li>Built a web application that provides personalized outfit suggestions using Ruby on Rails and Amazon Web Services.</li> 
+            <li>Presented at Carnegie Mellon as a finalist for the CMU Summit in 2015.</li>
+            <li>Received recognition as a finalist for DC's best tech manager for the 2015 Tech in Motion Awards.</li>
+          </ul>
         </div>
       </div>
     </div>
-    <div class="project-panel">
+    <div class="project-panel rev">
       <hr class="project-divider">
-      <div class="project-partial">
-        <div class="project-desc-right">
+      <div class="project-partial image">
+        <img class="project-img" src="images/flexellogo.jpg">
+      </div>
+      <div class="project-partial description">
+        <div class="project-desc">
           <h1 class="project-name">FlexEl</h1>
           <p class="project-role">Internal Systems Administrator</p>
-          <p class="project-info">Managed internal systems for FlexEl to ensure site reliability and secure access to internal resources.</p>
-          <p class="project-info">Built internal tools to allow reservation of shared spaces and file sharing.</p>
-          <p class="project-info">Set up disaster recovery system to mitigate costs of potential infrastructure failure.</p>
+          <ul class="project-info">
+            <li>Managed internal systems for FlexEl to ensure site reliability and secure access to internal resources.</li>
+            <li>Built internal tools to allow reservation of shared spaces and file sharing.</li>
+            <li>Set up disaster recovery system to mitigate costs of potential infrastructure failure.</li>
+          </ul>
         </div>
-      </div>
-      <div class="project-partial">
-        <img class="project-img" src="images/flexellogo.jpg">
       </div>
     </div>
   </body>
