--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,16 @@
   <body>
     <div class="hero">
       <a href="http://tonyliang.com">
-        <h1 class="display-name">Tony Liang</h1>
+        <h1 class="display-name hvr-grow">Tony Liang</h1>
       </a>
       <div class="icon-bar">
-        <a target="_blank" href="https://www.github.com/prebeta">
+        <a class="hvr-grow" target="_blank" href="https://www.github.com/prebeta">
           <img src="images/github.png">
         </a>
-        <a target="_blank" href="https://www.linkedin.com/in/tony3827">
+        <a class="hvr-grow" target="_blank" href="https://www.linkedin.com/in/tony3827">
           <img src="images/linkedin.png">
         </a>
-        <a href="mailto:tony3827@gmail.com">
+        <a class="hvr-grow" href="mailto:tony3827@gmail.com">
           <img src="images/email.png">
         </a>
       </div>
@@ -26,7 +26,7 @@
       <img class="profile-img" src="images/profile.jpg">
       <h1 class="profile-slg">I build things to make lives easier.</h1>
     </div>
-    <div class="project-panel left">
+    <div class="project-panel">
       <hr class="project-divider">
       <div class="project-partial image">
         <img class="project-img" src="images/demeremacbook.png">
@@ -56,6 +56,23 @@
             <li>Managed internal systems for FlexEl to ensure site reliability and secure access to internal resources.</li>
             <li>Built internal tools to allow reservation of shared spaces and file sharing.</li>
             <li>Set up disaster recovery system to mitigate costs of potential infrastructure failure.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="project-panel">
+      <hr class="project-divider">
+      <div class="project-partial image">
+        <img class="project-img" src="images/umdischool.jpg">
+      </div>
+      <div class="project-partial description">
+        <div class="project-desc">
+          <h1 class="project-name">UMD iSchool</h1>
+          <p class="project-role">Research Assistant</p>
+          <ul class="project-info">
+            <li>Conducted research on a dataset released by Orange Telecom for the Data for Development Challenge</li>
+            <li>Analyzed cell phone data using Matlab and ArcGIS and created visualizations of the data in Google Earth</li>
+            <li>Presented research findings at the MIT Media Lab for NetMob 2015</li>
           </ul>
         </div>
       </div>
