--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html> 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='css/main.css' rel='stylesheet' type='text/css'>
   </head>
@@ -76,6 +77,8 @@
           </ul>
         </div>
       </div>
+    </div>
+    <div class="footer">
     </div>
   </body>
 </html>
