--- a/public/pfos/index.html
+++ b/public/pfos/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>Psalm Full of Soul</title>
-    <link href='css/pfos.css' rel='stylesheet' type='text/css'>
+    <link href='css/pfos.css.min' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="menu-bar">
