fixed up pollhub

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> 
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +12,10 @@
         <h1 class="display-name hvr-grow">Tony Liang</h1>
       </a>
       <div class="icon-bar">
-        <a class="hvr-grow" target="_blank" href="https://www.github.com/prebeta">
+        <a class="hvr-grow" href="https://www.github.com/prebeta">
           <img src="images/github.png">
         </a>
-        <a class="hvr-grow" target="_blank" href="https://www.linkedin.com/in/tony3827">
+        <a class="hvr-grow" href="https://www.linkedin.com/in/tony3827">
           <img src="images/linkedin.png">
         </a>
         <a class="hvr-grow" href="mailto:tony3827@gmail.com">
@@ -37,7 +37,7 @@
           <h1 class="project-name">Demere</h1>
           <p class="project-role">Co-Founder | CTO | Full Stack Developer</p>
           <ul class="project-info">
-            <li>Built a web application that provides personalized outfit suggestions using Ruby on Rails and Amazon Web Services.</li> 
+            <li>Built a web application that provides personalized outfit suggestions using Ruby on Rails and Amazon Web Services.</li>
             <li>Presented at Carnegie Mellon as a finalist for the CMU Summit in 2015.</li>
             <li>Received recognition as a finalist for DC's best tech manager for the 2015 Tech in Motion Awards.</li>
           </ul>
