added Dropbox to personal website and removed PFOS files

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,23 @@
     <div class="project-panel">
       <hr class="project-divider">
       <div class="project-partial image">
+        <img class="project-img" src="images/dropbox.png">
+      </div>
+      <div class="project-partial description">
+        <div class="project-desc">
+          <h1 class="project-name">Dropbox</h1>
+          <p class="project-role">Site Reliability Engineering Intern</p>
+          <ul class="project-info">
+            <li>Scaled auditing system infrastructure to increase analytics auditing capacity by a factor of 100</li>
+            <li>Built and deployed in memory aggregation layer able to handle over 100,000 QPS</li>
+            <li>Reduced write rate and disk usage in MySQL by 99%</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="project-panel rev">
+      <hr class="project-divider">
+      <div class="project-partial image">
         <img class="project-img" src="images/demeremacbook.png">
       </div>
       <div class="project-partial description">
@@ -44,7 +61,7 @@
         </div>
       </div>
     </div>
-    <div class="project-panel rev">
+    <div class="project-panel">
       <hr class="project-divider">
       <div class="project-partial image">
         <img class="project-img" src="images/flexellogo.jpg">
@@ -61,7 +78,7 @@
         </div>
       </div>
     </div>
-    <div class="project-panel">
+    <div class="project-panel rev">
       <hr class="project-divider">
       <div class="project-partial image">
         <img class="project-img" src="images/umdischool.jpg">
@@ -79,6 +96,7 @@
       </div>
     </div>
     <div class="footer">
+      <!--TODO-->
     </div>
   </body>
 </html>
